--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 .three-container {
   width: 100vw;
   height: 100vh;
-  background: #f5f5f5;
-  
 }
 
 body{
   margin:0;
+  padding:0;
   overflow:hidden;
 }
 
@@ -14,7 +13,7 @@ body{
   position: absolute;
   top: 20px;
   right: 20px;
-  width: 250px;
+  width: 120px;
   background: #f8f9fa;
   padding: 20px;
   border-radius: 10px;
@@ -32,7 +31,7 @@ body{
   display:flex;
   flex-direction: column;
   gap:4px;
-  background: #f8f9fa;
+  color:white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -40,6 +39,8 @@ body{
   font-family: 'Arial', sans-serif;
   border: 1px solid #e9ecef;
 }
+
+
 
 label {
   display: flex;
@@ -106,13 +107,13 @@ input[type="text"]:focus {
 .info-box div {
   margin-bottom: 8px;
   font-size: 13px;
-  color: #495057;
+  color: white;
 }
 
 .info-box strong {
   display: inline-block;
   width: 80px;
-  color: #495057;
+  color: white;
 }
 
 .title {
@@ -125,7 +126,7 @@ input[type="text"]:focus {
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  font-family: 'Arial', sans-serif;
+  
   font-size: 30px;
   font-weight: bold;
   color: #e8eef3;
